services/kubernetes/manifests/librespeed/librespeed-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    stack: librespeed
  name: librespeed
  namespace: librespeed
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    stack: librespeed
